# MHFlib

./: CMakeLists.txt  License.txt  README.md
MHF/: GaussianHypothesis.h  MultiHypDist.h  MultiHypDist.hpp  SplitTable.h  defaultTable  demo.cpp  iau_ukf_eigen.h  iau_ukf_eigen.hpp  main.cpp
MHFPython/: GHList.cpp  GHListWrap.h  TmpModule.cpp  matrices.cpp  mhd.cpp  mhfpython.cpp  mhfpython.h  table.cpp  test.cpp  transformations.cpp  transformations.h  ukf.cpp  visualization.cpp  visualization.h
MHFPython/scripts/: actualdist.py  demo.py  figures.py  performance.py  plotGaussians.py  plotLines.py  plotdist.py  ukf.py  uniformSplit.py
generatetable/src/: generatetable.cpp
